--- a/src/app/home/friend/create/create.page.html
+++ b/src/app/home/friend/create/create.page.html
@@ -10,14 +10,14 @@
 <ion-content>
   <form #f="ngForm" (ngSubmit)="onSubmit(f)">
     <ion-list>
-      <ion-item>
+      <!-- <ion-item>
         <ion-label position="floating">First Name</ion-label>
         <ion-input type="text" ngModel name="fname"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Last Name</ion-label>
         <ion-input type="text" ngModel name="lname"></ion-input>
-      </ion-item>
+      </ion-item> -->
       <ion-item>
         <ion-label position="floating">Email</ion-label>
         <ion-input type="text" ngModel name="email"></ion-input>
