--- a/src/app/home/profile/profile.page.html
+++ b/src/app/home/profile/profile.page.html
@@ -20,7 +20,7 @@
   <ion-item style="padding-left: 20px;">Kesan selama belajar mobile ini seru dan paham semua materi yang diajarkan</ion-item>
   <ion-list class="detailUser">
     <ion-item>
-      <ion-label position="floating" color="primary">First Name</ion-label>
+      <ion-label position="floating" color="primary">Name</ion-label>
       <ion-input type="text" [readonly]="true" value="{{ name }}"></ion-input>
     </ion-item>
     <ion-item>
